# docs-example

./: .buildinfo  CMakeLists.txt  README.md  genindex.html  index.html  objects.inv  point.html  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree  point.doctree
.github/workflows/: build-docs.yml
_sources/: point.rst.txt
docs/: conf.py  index.rst
doxygen/: annotated.html  classRectangle-members.html  classRectangle.html  classRectangle__coll__graph.map  classRectangle__coll__graph.md5  classRectangle__inherit__graph.map  classRectangle__inherit__graph.md5  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_rela.html  functions_vars.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_2.map  inherit_graph_2.md5  inherit_graph_3.map  inherit_graph_3.md5  inherits.html  lib_8hpp_source.html  menudata.js  structDiamond-members.html  structDiamond.html  structDiamond__coll__graph.map  structDiamond__coll__graph.md5  structDiamond__inherit__graph.map  structDiamond__inherit__graph.md5  structPoint-members.html  structPoint.html  structShape-members.html  structShape.html  structShape__inherit__graph.map  structShape__inherit__graph.md5  structSquare-members.html  structSquare.html  structSquare__coll__graph.md5  (+5 more)
doxygen/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  pages_0.js  related_0.js  searchdata.js  variables_0.js  variables_1.js
sphinx/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
sphinx/.doctrees/: environment.pickle  index.doctree
sphinx/_sources/: index.rst.txt
src/: index.md  main.cpp  point.cpp  point.hpp
